--- a/index.html
+++ b/index.html
@@ -36,10 +36,68 @@
                     </li>
                 </ul>
             </address>
+            <button type="button" class="burger-btn"><svg class="burger-icon" width="24" height="24">
+              <use href="./images/icons.svg#icon-heroicons-solid_menu"></use></svg></button>
+        </div>
+        <div class="mobile-menu">
+            <div class="container mobile-menu-container">
+                <button type="button" class="mobile-menu-close">
+                    <svg class="icon-close" width="8" height="8">
+                    <use href="./images/icons.svg#icon-close"></use>
+                </svg>
+            </button>
+                <nav class="mobile-menu-nav">
+                    <ul class="mobile-list">
+                    <li><a class="nav-link-mobile active" href="./index.html">Studio</a></li>
+                    <li><a class="nav-link-mobile" href="">Portfolio</a></li>
+                    <li><a class="nav-link-mobile" href="">Contacts</a></li>
+                </ul>
+                </nav>
+                <address>
+                    <ul>
+                    <li>
+                        <a class="mobile-link-address" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                    </li>
+                    <li>
+                        <a class="mobile-link-address" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    </li>
+                </ul>
+            </address>
+                <ul>
+                        <li class="team-social-item">
+                                    <a href="#" class="team-link-social">
+                                        <svg class="icon-social" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-social-item">
+                                    <a href="#" class="team-link-social">
+                                        <svg class="icon-social" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-social-item">
+                                    <a href="#" class="team-link-social">
+                                        <svg class="icon-social" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-social-item">
+                                    <a href="#" class="team-link-social">
+                                        <svg class="icon-social" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                </ul>
+            </div>
         </div>
     </header>
     <main>
-        <!--Principal part-->
+      <!-- Principal part -->
         <section class="section">
             <div class="container">
                 <h1 class="section-title">Effective Solutions<br>for Your Business</h1>
@@ -47,12 +105,12 @@
             </div>
         </section>
         <!--benefits-->
-        <section class="benefits">
+        <section class="benefits"> 
             <div class="container">
                 <h2 class="visually-hidden">our benefits</h2>
                 <ul class="benef-list">
                     <li class="benef-item">
-                        <div class="benef-box-icon">
+                       <div class="benef-box-icon">
                             <svg class="benef-icon" width="64" height="64">
                                 <use href="./images/icons.svg#icon-antenna"></use>
                             </svg>
@@ -93,14 +151,14 @@
                     </li>
                 </ul>
             </div>
-        </section>
+        </section> 
         <!--our team-->
         <section class="team">
             <div class="container">
                 <h2 class="team-title">Our Team</h2>
                 <ul class="team-list">
                     <li class="team-item">
-                        <img class="team-img" src="./images/team-cart1.jpg" alt="Mark Product Designer" width="264"
+                        <img class="team-img" srcset="./images/img1x.jpg 1x, ./images/img2x.jpg 2x" src="./images/img1x.jpg" alt="Mark Product Designer" width="264"
                             height="260">
                         <div class="team-cart">
                             <h3 class="team-name">Mark Guerrero</h3>
@@ -139,7 +197,7 @@
                     </li>
 
                     <li class="team-item">
-                        <img class="team-img" src="./images/team-cart2.jpg" alt="Tom Frontend Developer" width="264"
+                        <img class="team-img" srcset="./images/tom1x.jpg 1x, ./images/tom2x.jpg 2x" src="./images/tom1x.jpg" alt="Tom Frontend Developer" width="264"
                             height="260">
                         <div class="team-cart">
                             <h3 class="team-name">Tom Ford</h3>
@@ -178,7 +236,7 @@
                     </li>
 
                     <li class="team-item">
-                        <img class="team-img" src="./images/team-cart3.jpg" alt="Camila Marketing" width="264"
+                        <img class="team-img" srcset="./images/camila1x.jpg 1x, ./images/camila2x.jpg 2x" src="./images/camila1x.jpg" alt="Camila Marketing" width="264"
                             height="260">
                         <div class="team-cart">
                             <h3 class="team-name">Camila Garcia</h3>
@@ -217,7 +275,7 @@
                     </li>
 
                     <li class="team-item">
-                        <img class="team-img" src="./images/team-cart4.jpg" alt="Daniel UI Designer" width="264"
+                        <img class="team-img" srcset="./images/danil1x.jpg 1x, ./images/danil2x.jpg 2x" src="./images/danil1x.jpg" alt="Daniel UI Designer" width="264"
                             height="260">
                         <div class="team-cart">
                             <h3 class="team-name">Daniel Wilson</h3>
@@ -257,13 +315,14 @@
                 </ul>
             </div>
         </section>
+        <!-- Our Portfolio -->
         <section class="portfolio">
             <div class="container container-portfolio">
                 <h2 class="portfolio-title">Our Portfolio</h2>
                 <ul class="portfolio-list">
                     <li class="portfolio-item">
                         <div class="portfolio-img-wrap">
-                            <img src="./images/img.jpg" alt="Banking App" width="360" height="300">
+                            <img srcset="./images/fon1x.jpg 1x, ./images/fon2x.jpg 2x" src="./images/fon1x.jpg" alt="Banking App" width="360" height="300">
                             <p class="portfolio-overlay-text">14 Stylish and User-Friendly App Design Concepts · Task
                                 Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
@@ -274,7 +333,7 @@
                     </li>
                     <li class="portfolio-item">
                         <div class="portfolio-img-wrap">
-                            <img src="./images/img-1.jpg" alt="Cashless Payment" width="360" height="300">
+                            <img srcset="./images/cash1x.jpg 1x, ./images/cash2x.jpg 2x" src="./images/cash1x.jpg" alt="Cashless Payment" width="360" height="300">
                             <p class="portfolio-overlay-text">14 Stylish and User-Friendly App Design Concepts · Task
                                 Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
@@ -285,7 +344,7 @@
                     </li>
                     <li class="portfolio-item">
                         <div class="portfolio-img-wrap">
-                            <img src="./images/img-2.jpg" alt="Meditation App" width="360" height="300">
+                            <img srcset="./images/meditation1x.jpg 1x, ./images/meditation2x.jpg 2x" src="./images/meditation1x.jpg" alt="Meditation App" width="360" height="300">
                             <p class="portfolio-overlay-text">14 Stylish and User-Friendly App Design Concepts · Task
                                 Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
@@ -296,7 +355,7 @@
                     </li>
                     <li class="portfolio-item">
                         <div class="portfolio-img-wrap">
-                            <img src="./images/img-3.jpg" alt="Taxi Service" width="360" height="300">
+                            <img srcset="./images/taxi1x.jpg, ./images/taxi2x.jpg 2x" src="./images/taxi1x.jpg" alt="Taxi Service" width="360" height="300">
                             <p class="portfolio-overlay-text">14 Stylish and User-Friendly App Design Concepts · Task
                                 Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
@@ -307,7 +366,7 @@
                     </li>
                     <li class="portfolio-item">
                         <div class="portfolio-img-wrap">
-                            <img src="./images/img-4.jpg" alt="Screen Illustrations" width="360" height="300">
+                            <img srcset="./images/screen1x.jpg 1x, ./images/screen2x.jpg 2x" src="./images/screen1x.jpg" alt="Screen Illustrations" width="360" height="300">
                             <p class="portfolio-overlay-text">14 Stylish and User-Friendly App Design Concepts · Task
                                 Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
@@ -318,7 +377,7 @@
                     </li>
                     <li class="portfolio-item">
                         <div class="portfolio-img-wrap">
-                            <img src="./images/img-5.jpg" alt="Online Courses" width="360" height="300">
+                            <img srcset="./images/online1x.jpg 1x, ./images/online2x.jpg 2x" src="./images/online1x.jpg" alt="Online Courses" width="360" height="300">
                             <p class="portfolio-overlay-text">14 Stylish and User-Friendly App Design Concepts · Task
                                 Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
@@ -331,6 +390,7 @@
             </div>
         </section>
     </main>
+    <!-- Footer -->
 <footer class="footer">
         <div class="container footer-container">
             <div class="footer-content">
@@ -387,6 +447,7 @@
             </div>
         </div>
     </footer>
+    <!-- modal -->
     <div class="backdrop is-open">
         <div class="modal">
             <button type="button" class="modal-close">
